@@ -87,7 +87,7 @@ public class IsaacReorderValidator implements IValidator {
                 feedback = new Content(FEEDBACK_UNRECOGNISED_FORMAT);
             } else {
                 Set<String> allowedItemIds = reorderQuestion.getItems().stream().map(Item::getId).collect(Collectors.toSet());
-                submittedItemIds = submittedChoice.getItems().stream().map(Item::getId).collect(Collectors.toList());
+                submittedItemIds = submittedChoice.getItems().stream().map(Item::getId).toList();
                 if (!allowedItemIds.containsAll(submittedItemIds)) {
                     feedback = new Content(FEEDBACK_UNRECOGNISED_ITEMS);
                 }
@@ -121,7 +121,7 @@ public class IsaacReorderValidator implements IValidator {
                     log.error(String.format("Expected list of Items, but something else found in choice for question id (%s)!", reorderQuestion.getId()));
                     continue;
                 }
-                List<String> trustedChoiceItemIds = itemChoice.getItems().stream().map(Item::getId).collect(Collectors.toList());
+                List<String> trustedChoiceItemIds = itemChoice.getItems().stream().map(Item::getId).toList();
 
                 // ... look for a match to the submitted answer.
 
